[package]
name = "queues"
version = "1.1.0"
authors = ["Alan Kavishe <afksavish@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Efficient FIFO Queue data structures"
repository = "https://gitlab.com/rust-algorithms/queues"
readme = "README.md"
keywords = ["data-structures"]
categories = ["data-structures"]
edition = "2018"

[badges]
gitlab = { repository = "rust-algorithms/queues", branch = "master" }

[dependencies]
